fixed weird wrapping behavior on profile

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -37,49 +37,38 @@ body {
     font-size: 2.5em;
 }
 
-.card-body label{
-    font-size: 2em;
-}
-
 div.info {
     font-size: 1.5em;
     margin-right: 80%;
 }
 
 .parent {
-    display: inline-block;
-    margin-right: 78%;
-    padding-left: 0;
+    display: flex;
+    padding: 0;
+}
+
+.parent div {
+    font-size: 1.3em;
+    color: #0157B3;
 }
 
 .parent p {
     font-size: 1.3em;
-    display: inline-block;
-    color: #0157B3;
-}
-
-.parent span {
-    font-size: 1.3em;
-    display: inline-block;
-    padding-right: 20%;
+    padding-left: 20px;
 }
 
 .parent-two {
-    display: inline-block;
-    margin-right: 80%;
-    padding-left: 0;
+    display: flex;
+}
+
+.parent-two div {
+    font-size: 1.3em;
+    color: #0157B3;
 }
 
 .parent-two p {
     font-size: 1.3em;
-    display: inline-block;
-    color: #0157B3;
-}
-
-.parent-two span {
-    font-size: 1.3em;
-    display: inline-block;
-    padding-right: 39%;
+    padding-left:  20px;
 }
 
 .login-body {
